# SpeedSkatingTimer

./: .gitignore
backend/: Cargo.toml  README.txt  SpeedSkating-Backend.service  deploy.sh  install-service.sh
backend/src/: data.rs  gpio.rs  handler.rs  main.rs  mod.rs  ws.rs
frontend/: deploy.sh  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.scss  App.tsx  Clock.scss  Clock.tsx  Setup.tsx  TickingClock.tsx  client.ts  main.tsx  useBackend.ts
mock-backend/: package.json  pnpm-lock.yaml
mock-backend/src/: client.ts  server.ts
